package NYT.NTabletClient.NProto;

import "yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqMount
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];

    // If omitted then cell is chosen automatically.
    optional NYT.NProto.TGuid cell_id = 3;

    required bool freeze = 4;
    optional uint64 mount_timestamp = 5 [default = 0];

    required NYT.NProto.TGuid table_id = 6;
    required string path = 7;
}

message TRspMount
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqUnmount
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];
    required bool force = 3;
    required NYT.NProto.TGuid table_id = 4;
}

message TRspUnmount
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRemount
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];
    required NYT.NProto.TGuid table_id = 3;
}

message TRspRemount
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqFreeze
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];
    required NYT.NProto.TGuid table_id = 3;
}

message TRspFreeze
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqUnfreeze
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];
    required NYT.NProto.TGuid table_id = 3;
}

message TRspUnfreeze
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqReshard
{
    // If omitted then all tablets are affected.
    required int32 first_tablet_index = 1 [default = -1];
    required int32 last_tablet_index = 2 [default = -1];
    // For sorted tables only.
    repeated bytes pivot_keys = 3;
    required int32 tablet_count = 4;
    required NYT.NProto.TGuid table_id = 5;
}

message TRspReshard
{ }

////////////////////////////////////////////////////////////////////////////////
